--- a/style.css
+++ b/style.css
@@ -50,3 +50,14 @@ input[type="number"]::-webkit-inner-spin-button {
   width: 50px;
   height: 50px;
 }
+
+#titulo {
+  font-size: 50px;
+}
+
+#perguntas {
+  font-size: 25px;
+  font-style: italic;
+  width: 90%;
+  margin: auto;
+}
