--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+.carrosel_img {
+  margin-top: 55px;
+}
+
 .imagem-carrossel {
   object-fit: cover;
   object-position: 0 80%;
@@ -6,7 +10,7 @@
 
 .imagem-carrossel-qs {
   object-fit: cover;
-    height: 600px;
+  height: 600px;
 }
 
 .imagem-posicao-card {
@@ -26,7 +30,8 @@
   margin: auto;
 }
 
-.form-contato > input , textarea {
+.form-contato > input,
+textarea {
   margin-bottom: 10px;
   width: 18rem;
 }
@@ -70,8 +75,8 @@ button {
   margin-top: 20px;
 }
 
-.imagens-qs{
-  height: 300px; 
+.imagens-qs {
+  height: 300px;
 }
 
 #seletorContato {
@@ -83,7 +88,7 @@ button {
   #titulo {
     margin-top: 50px;
   }
-   #paragrafoQuemSomos{
+  #paragrafoQuemSomos {
     margin-top: 100px;
-}
+  }
 }
