--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@
   margin-top: 55px;
 }
 
+header{
+  margin-bottom: 10vh;
+}
+
 .imagem-carrossel {
   object-fit: cover;
   object-position: 0 80%;
@@ -76,6 +80,7 @@ button {
 }
 
 .imagens-qs {
+  width: 100%;
   height: 300px;
 }
 
@@ -86,6 +91,10 @@ button {
   margin: 5vh 0;
 }
 
+#perguntas {
+  margin-left: 50px;
+}
+
 @media (max-width: 1200px) {
   #titulo {
     margin-top: 5vh;
@@ -93,4 +102,18 @@ button {
   #paragrafoQuemSomos {
     margin-top: 100px;
   }
+  #img-qs {
+    flex-direction: column;
+  }
+  #title-qs{
+    text-align: center;
+  }
+  #perguntas {
+    width: 90%;
+    margin: auto;
+  }
+  #perguntas::first-letter {
+    padding-left: 20px;
+  }
+
 }
